--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dev": "next dev ./src",
     "build": "next build ./src",
     "typecheck": "tsc --project tsconfig.json --noEmit --skipLibCheck",
-    "lint": "eslint */**.tsx ",
-    "lint:fix": "eslint */** --fix"
+    "lint": "eslint */**",
+    "lint:fix": "eslint */** --fix",
+    "deploy": "next build ./src && sls deploy",
+    "deploy:function": "next build ./src && sls deploy function --function next"
   },
   "dependencies": {
     "@zeit/next-source-maps": "^0.0.3",
@@ -20,6 +22,7 @@
     "next-server": "^8.0.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "recharts": "^1.5.0",
     "serverless-http": "^1.9.1",
     "styled-components": "^4.1.3"
   },
@@ -28,9 +31,11 @@
     "@types/node": "11.9.5",
     "@types/react": "^16.8.5",
     "@types/react-dom": "16.8.2",
+    "@types/recharts": "^1.1.13",
     "@types/styled-components": "^4.1.10",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
+    "babel-plugin-styled-components": "^1.10.0",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "2.14.0",
