--- a/package.json
+++ b/package.json
@@ -2,48 +2,41 @@
   "name": "cloudkeeper-ui",
   "version": "0.1.0",
   "private": true,
-  "main": "src/pages/index.js",
   "scripts": {
-    "start": "next build ./src && serverless offline start",
-    "dev": "next dev ./src",
-    "build": "next build ./src",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "typecheck": "tsc --project tsconfig.json --noEmit --skipLibCheck",
     "lint": "eslint */**",
-    "lint:fix": "eslint */** --fix",
-    "deploy": "next build ./src && sls deploy",
-    "deploy:function": "next build ./src && sls deploy function --function next"
+    "lint:fix": "eslint */** --fix"
   },
   "dependencies": {
-    "@zeit/next-source-maps": "^0.0.3",
-    "@zeit/next-typescript": "^1.1.1",
-    "express": "^4.16.4",
-    "next": "^8.0.3",
-    "next-images": "^1.0.4",
-    "next-server": "^8.0.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^2.1.5",
     "recharts": "^1.5.0",
-    "serverless-http": "^1.9.1",
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "@types/next": "^8.0.1",
     "@types/node": "11.9.5",
     "@types/react": "^16.8.5",
     "@types/react-dom": "16.8.2",
     "@types/recharts": "^1.1.13",
     "@types/styled-components": "^4.1.10",
-    "@typescript-eslint/eslint-plugin": "^1.4.2",
     "@typescript-eslint/parser": "^1.4.2",
     "babel-plugin-styled-components": "^1.10.0",
-    "eslint": "5.3.0",
     "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "2.14.0",
-    "eslint-plugin-jsx-a11y": "6.1.1",
-    "eslint-plugin-react": "7.11.0",
-    "serverless": "^1.38.0",
-    "serverless-apigw-binary": "^0.4.4",
-    "serverless-offline": "^4.7.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.11.0",
     "typescript": "3.3.3333"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
