--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,7 @@
   },
   "rules": {
     "semi": ["error", "never"],
+    "max-len": ["error", 120],
     "object-curly-newline": ["error", {"consistent": true}],
     "react/jsx-filename-extension": [1, {"extensions": [".tsx", ".jsx"]}],
     "@typescript-eslint/no-unused-vars": "error"
