--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "final-form": "^4.11.1",
     "history": "^4.7.2",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-final-form": "^4.0.2",
@@ -23,7 +24,8 @@
     "styled-components": "^4.1.3"
   },
   "devDependencies": {
-    "@types/node": "11.9.6",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/node": "11.10.0",
     "@types/react": "^16.8.6",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
