--- a/.eslintrc
+++ b/.eslintrc
@@ -25,6 +25,10 @@
     "max-len": ["error", 120],
     "object-curly-newline": ["error", {"consistent": true}],
     "react/jsx-filename-extension": [1, {"extensions": [".tsx", ".jsx"]}],
-    "@typescript-eslint/no-unused-vars": "error"
+    "@typescript-eslint/no-unused-vars": "error",
+    "react/sort-comp": "off",
+    "no-confusing-arrow": "off",
+    "react/destructuring-assignment": "warn",
+    "import/prefer-default-export": "warn"
   }
 }
