--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "final-form": "^4.11.1",
+    "final-form": "^4.12.0",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.11",
     "luxon": "^1.11.4",
     "polished": "^3.0.3",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-final-form": "^4.0.2",
+    "react-final-form": "^4.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "recharts": "^1.5.0",
@@ -31,8 +32,9 @@
   },
   "devDependencies": {
     "@types/jwt-decode": "^2.2.1",
+    "@types/lodash": "^4.14.121",
     "@types/luxon": "^1.11.1",
-    "@types/node": "11.10.0",
+    "@types/node": "11.10.4",
     "@types/react": "^16.8.6",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
