--- a/package.json
+++ b/package.json
@@ -16,13 +16,21 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-cache-persist": "^0.1.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-context": "^1.0.15",
+    "apollo-link-http": "^1.5.12",
     "final-form": "^4.12.0",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "history": "^4.7.2",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "luxon": "^1.11.4",
     "polished": "^3.0.3",
     "react": "^16.8.4",
+    "react-apollo": "^2.5.2",
     "react-dom": "^16.8.4",
     "react-final-form": "^4.1.0",
     "react-router-dom": "^4.3.1",
