--- a/.eslintrc
+++ b/.eslintrc
@@ -28,6 +28,7 @@
     "@typescript-eslint/no-unused-vars": "error",
     "react/sort-comp": "off",
     "no-confusing-arrow": "off",
+    "operator-linebreak": "off",
     "react/destructuring-assignment": "warn",
     "import/prefer-default-export": "warn"
   }
