--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-apollo": "^2.5.2",
     "react-dom": "^16.8.4",
     "react-final-form": "^4.1.0",
+    "react-particles-js": "^2.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
     "recharts": "^1.5.0",
@@ -42,7 +43,7 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.122",
     "@types/luxon": "^1.11.1",
-    "@types/node": "11.10.5",
+    "@types/node": "11.11.0",
     "@types/react": "^16.8.7",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
