--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.7.2",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@types/react-copy-to-clipboard": "^4.2.6",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.5.1",
@@ -31,6 +32,7 @@
     "polished": "^3.0.3",
     "react": "^16.8.4",
     "react-apollo": "^2.5.2",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.4",
     "react-final-form": "^4.1.0",
     "react-particles-js": "^2.4.2",
