--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-particles-js": "^2.4.2",
     "react-router-dom": "^4.4.0",
     "react-scripts": "^2.1.8",
+    "react-select": "^2.4.2",
     "recharts": "^1.5.0",
     "styled-components": "^4.1.3"
   },
@@ -49,6 +50,7 @@
     "@types/react": "^16.8.8",
     "@types/react-dom": "16.8.2",
     "@types/react-router-dom": "^4.3.1",
+    "@types/react-select": "^2.0.15",
     "@types/recharts": "^1.1.14",
     "@types/styled-components": "^4.1.12",
     "@typescript-eslint/eslint-plugin": "^1.4.2",
