--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "@types/react-copy-to-clipboard": "^4.2.6",
+    "@types/react-helmet": "^5.0.8",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-cache-persist": "^0.1.1",
     "apollo-client": "^2.5.1",
@@ -35,6 +36,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.4",
     "react-final-form": "^4.1.0",
+    "react-helmet": "^5.2.0",
     "react-particles-js": "^2.4.2",
     "react-router-dom": "^4.4.0",
     "react-scripts": "^2.1.8",
