--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "lint:fix": "eslint \"src/**\" --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.15",
-    "@fortawesome/free-regular-svg-icons": "^5.7.2",
-    "@fortawesome/free-solid-svg-icons": "^5.7.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-regular-svg-icons": "^5.8.1",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-cache-persist": "^0.1.1",
@@ -27,18 +27,19 @@
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
-    "luxon": "^1.11.4",
-    "polished": "^3.0.3",
-    "react": "^16.8.4",
+    "luxon": "^1.12.0",
+    "polished": "^3.0.4",
+    "react": "^16.8.5",
     "react-apollo": "^2.5.2",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.4",
+    "react-dom": "^16.8.5",
     "react-final-form": "^4.1.0",
     "react-helmet": "^5.2.0",
     "react-particles-js": "^2.5.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
     "react-select": "^2.4.2",
+    "react-spring": "^8.0.18",
     "recharts": "^1.5.0",
     "styled-components": "^4.1.3"
   },
@@ -46,24 +47,25 @@
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.123",
     "@types/luxon": "^1.11.1",
-    "@types/node": "11.11.3",
+    "@types/node": "11.11.6",
     "@types/react": "^16.8.8",
     "@types/react-copy-to-clipboard": "^4.2.6",
-    "@types/react-dom": "16.8.2",
+    "@types/react-dom": "16.8.3",
     "@types/react-helmet": "^5.0.8",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-select": "^2.0.15",
     "@types/recharts": "^1.1.14",
     "@types/styled-components": "^4.1.12",
-    "@typescript-eslint/eslint-plugin": "^1.4.2",
-    "@typescript-eslint/parser": "^1.4.2",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
+    "@typescript-eslint/parser": "^1.5.0",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "jest-junit": "^6.3.0",
-    "typescript": "3.3.3333"
+    "typescript": "3.3.4000"
   },
   "browserslist": [
     ">0.2%",
