--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "typecheck": "tsc --project tsconfig.json --noEmit --skipLibCheck",
+    "typecheck": "tsc",
     "lint": "eslint \"src/**\"",
     "lint:fix": "eslint \"src/**\" --fix"
   },
@@ -22,13 +22,13 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-http": "^1.5.14",
     "final-form": "^4.12.0",
-    "graphql": "^14.2.0",
+    "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
     "luxon": "^1.12.0",
-    "polished": "^3.1.0",
+    "polished": "^3.2.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.3",
     "react-copy-to-clipboard": "^5.0.1",
@@ -39,16 +39,16 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
     "react-select": "^2.4.2",
-    "react-spring": "^8.0.18",
+    "react-spring": "^8.0.19",
     "recharts": "^1.5.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.123",
-    "@types/luxon": "^1.11.1",
-    "@types/node": "11.12.2",
-    "@types/react": "^16.8.10",
+    "@types/luxon": "^1.12.0",
+    "@types/node": "11.13.0",
+    "@types/react": "^16.8.12",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.3",
     "@types/react-helmet": "^5.0.8",
@@ -56,8 +56,8 @@
     "@types/react-select": "^2.0.15",
     "@types/recharts": "^1.1.16",
     "@types/styled-components": "^4.1.12",
-    "@typescript-eslint/eslint-plugin": "^1.5.0",
-    "@typescript-eslint/parser": "^1.5.0",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "babel-plugin-styled-components": "^1.10.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.14.0",
