--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "polished": "^3.2.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.3",
+    "react-apollo-hooks": "^0.4.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-final-form": "^4.1.0",
