Added initial settings page and tenant-switching system

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "typecheck": "tsc",
+    "tsc": "tsc",
     "lint": "eslint \"src/**\"",
     "lint:fix": "eslint \"src/**\" --fix"
   },
@@ -30,7 +30,7 @@
     "luxon": "^1.12.0",
     "polished": "^3.2.0",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.3",
+    "react-apollo": "^2.5.4",
     "react-apollo-hooks": "^0.4.4",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
@@ -56,7 +56,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-select": "^2.0.15",
     "@types/recharts": "^1.1.16",
-    "@types/styled-components": "^4.1.12",
+    "@types/styled-components": "^4.1.13",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
     "babel-plugin-styled-components": "^1.10.0",
