--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^16.8.6",
     "react-final-form": "^4.1.0",
     "react-helmet": "^5.2.0",
+    "react-modal": "^3.8.1",
     "react-particles-js": "^2.5.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "^2.1.8",
@@ -53,6 +54,7 @@
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.3",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-modal": "^3.8.1",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-select": "^2.0.15",
     "@types/recharts": "^1.1.16",
