--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-select": "^2.4.2",
     "react-spring": "^8.0.19",
     "recharts": "^1.5.0",
+    "screenfull": "^4.2.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
@@ -58,6 +59,7 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-select": "^2.0.15",
     "@types/recharts": "^1.1.16",
+    "@types/screenfull": "^4.1.0",
     "@types/styled-components": "^4.1.13",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
