--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
     "tsc": "tsc",
     "lint": "eslint \"src/**\"",
     "lint:fix": "eslint \"src/**\" --fix",
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "generate-types": "apollo codegen:generate --localSchemaFile=schema.graphql --target=typescript --includes=src/**/*.ts --tagName=gql --addTypename --globalTypesFile=src/graphql/types/graphql-global-types.ts types"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "antd": "^3.16.5",
     "apollo-cache": "^1.2.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-cache-persist": "^0.1.1",
@@ -76,6 +77,7 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "jest-junit": "^6.3.0",
     "react-scripts": "^3.0.0",
+    "source-map-explorer": "^1.8.0",
     "typescript": "3.3.4000"
   },
   "browserslist": [
