--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.8.1",
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "antd": "^3.16.5",
     "apollo-cache": "^1.2.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-cache-persist": "^0.1.1",
@@ -26,7 +25,7 @@
     "apollo-link-context": "^1.0.17",
     "apollo-link-http": "^1.5.14",
     "final-form": "^4.12.0",
-    "firebase": "^5.10.0",
+    "firebase": "^5.10.1",
     "graphql": "^14.2.1",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
@@ -46,6 +45,7 @@
     "react-router-dom": "^5.0.0",
     "react-select": "^2.4.3",
     "react-spring": "^8.0.19",
+    "react-toastify": "^5.1.0",
     "recharts": "^1.5.0",
     "screenfull": "^4.2.0",
     "styled-components": "^4.2.0"
@@ -68,7 +68,7 @@
     "@types/styled-components": "^4.1.14",
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
-    "apollo": "^2.8.3",
+    "apollo": "^2.9.0",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.17.2",
     "eslint-plugin-jsx-a11y": "^6.1.1",
