--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,6 +86,7 @@ jobs:
             - v1-yarn-
 
       - run: yarn build
+      - run: yarn build-storybook
       - run: aws s3 sync build/. s3://dev.cloudkeeper.io/ --delete
 
   prod-build-deploy:
@@ -105,6 +106,7 @@ jobs:
             - v1-yarn-
 
       - run: REACT_APP_ENV="prod" yarn build
+      - run: yarn build-storybook
       - run:
           name: Deploy
           command: |
