--- a/package.json
+++ b/package.json
@@ -15,73 +15,74 @@
     "build-storybook": "build-storybook -s public -o build/storybook"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.18",
-    "@fortawesome/free-brands-svg-icons": "^5.8.2",
-    "@fortawesome/free-regular-svg-icons": "^5.8.2",
-    "@fortawesome/free-solid-svg-icons": "^5.8.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/free-regular-svg-icons": "^5.9.0",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
-    "apollo-cache": "^1.3.0",
-    "apollo-cache-inmemory": "^1.6.0",
+    "@material-ui/core": "^4.1.1",
+    "apollo-cache": "^1.3.2",
+    "apollo-cache-inmemory": "^1.6.2",
     "apollo-cache-persist": "^0.1.1",
-    "apollo-client": "^2.6.0",
-    "apollo-link-context": "^1.0.17",
-    "apollo-link-http": "^1.5.14",
-    "final-form": "^4.13.0",
-    "firebase": "^6.0.4",
+    "apollo-client": "^2.6.2",
+    "apollo-link-context": "^1.0.18",
+    "apollo-link-http": "^1.5.15",
+    "final-form": "^4.15.0",
+    "firebase": "^6.2.0",
     "graphql": "^14.3.1",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
-    "luxon": "^1.15.0",
+    "luxon": "^1.16.0",
     "polished": "^3.4.0",
     "react": "^16.8.6",
     "react-apollo": "^2.5.6",
     "react-apollo-hooks": "^0.4.5",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
-    "react-final-form": "^6.0.0",
+    "react-final-form": "^6.2.1",
     "react-helmet": "^5.2.1",
     "react-modal": "^3.8.1",
     "react-particles-js": "^2.6.0",
-    "react-router-dom": "^5.0.0",
-    "react-select": "^3.0.3",
-    "react-spring": "^8.0.20",
-    "react-toastify": "^5.1.1",
+    "react-router-dom": "^5.0.1",
+    "react-select": "^3.0.4",
+    "react-spring": "^8.0.25",
+    "react-toastify": "^5.2.1",
     "recharts": "^1.6.2",
     "screenfull": "^4.2.0",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
-    "@storybook/addon-info": "^5.0.11",
-    "@storybook/addon-knobs": "^5.0.11",
-    "@storybook/addon-viewport": "^5.0.11",
-    "@storybook/addons": "^5.0.11",
-    "@storybook/react": "^5.0.11",
-    "@storybook/theming": "^5.0.11",
+    "@storybook/addon-info": "^5.1.8",
+    "@storybook/addon-knobs": "^5.1.8",
+    "@storybook/addon-viewport": "^5.1.8",
+    "@storybook/addons": "^5.1.8",
+    "@storybook/react": "^5.1.8",
+    "@storybook/theming": "^5.1.8",
     "@types/firebase": "^3.2.1",
     "@types/jwt-decode": "^2.2.1",
-    "@types/lodash": "^4.14.132",
-    "@types/luxon": "^1.13.0",
-    "@types/node": "12.0.2",
-    "@types/react": "^16.8.18",
+    "@types/lodash": "^4.14.134",
+    "@types/luxon": "^1.15.1",
+    "@types/node": "12.0.8",
+    "@types/react": "^16.8.20",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-modal": "^3.8.2",
-    "@types/react-router-dom": "^4.3.3",
+    "@types/react-router-dom": "^4.3.4",
     "@types/react-select": "^2.0.19",
     "@types/recharts": "^1.1.16",
     "@types/screenfull": "^4.1.0",
-    "@types/storybook__addon-actions": "^3.4.2",
-    "@types/storybook__addon-knobs": "^5.0.0",
-    "@types/storybook__addon-links": "^3.3.4",
-    "@types/storybook__react": "^4.0.1",
-    "@types/styled-components": "^4.1.15",
-    "@typescript-eslint/eslint-plugin": "^1.9.0",
-    "@typescript-eslint/parser": "^1.9.0",
-    "apollo": "^2.12.3",
+    "@types/storybook__addon-actions": "^3.4.3",
+    "@types/storybook__addon-knobs": "^5.0.1",
+    "@types/storybook__addon-links": "^3.3.5",
+    "@types/storybook__react": "^4.0.2",
+    "@types/styled-components": "^4.1.16",
+    "@typescript-eslint/eslint-plugin": "^1.10.2",
+    "@typescript-eslint/parser": "^1.10.2",
+    "apollo": "2.11.0",
     "babel-loader": "^8.0.6",
     "eslint-config-airbnb": "17.1.0",
     "eslint-plugin-import": "^2.17.3",
@@ -90,8 +91,8 @@
     "eslint-plugin-react-hooks": "^1.6.0",
     "jest-junit": "^6.4.0",
     "react-scripts": "^3.0.1",
-    "source-map-explorer": "^1.8.0",
-    "typescript": "3.3.4000"
+    "source-map-explorer": "^2.0.0",
+    "typescript": "3.5.2"
   },
   "browserslist": [
     ">0.2%",
