--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@fortawesome/free-regular-svg-icons": "^5.9.0",
     "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
+    "@material-ui/styles": "^4.1.2",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-cache-persist": "^0.1.1",
@@ -28,33 +31,33 @@
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
     "final-form": "^4.16.1",
-    "firebase": "^6.2.3",
-    "graphql": "^14.3.1",
+    "firebase": "^6.2.4",
+    "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.11",
-    "luxon": "^1.16.0",
+    "luxon": "^1.16.1",
     "polished": "^3.4.1",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.8",
+    "react-apollo": "^3.0.0-beta.3",
     "react-apollo-hooks": "^0.4.5",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
     "react-final-form": "^6.3.0",
     "react-helmet": "^5.2.1",
-    "react-modal": "^3.8.1",
+    "react-modal": "^3.8.2",
     "react-particles-js": "^2.6.0",
     "react-router-dom": "^5.0.1",
     "react-select": "^3.0.4",
-    "react-spring": "^8.0.25",
+    "react-spring": "^8.0.27",
     "react-toastify": "^5.3.1",
     "recharts": "^1.6.2",
     "screenfull": "^4.2.0",
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
+    "@babel/core": "^7.5.0",
     "@storybook/addon-info": "^5.1.9",
     "@storybook/addon-knobs": "^5.1.9",
     "@storybook/addon-viewport": "^5.1.9",
@@ -63,30 +66,30 @@
     "@storybook/theming": "^5.1.9",
     "@types/firebase": "^3.2.1",
     "@types/jwt-decode": "^2.2.1",
-    "@types/lodash": "^4.14.134",
-    "@types/luxon": "^1.15.1",
-    "@types/node": "12.0.10",
-    "@types/react": "^16.8.22",
+    "@types/lodash": "^4.14.135",
+    "@types/luxon": "^1.15.2",
+    "@types/node": "12.0.12",
+    "@types/react": "^16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dom": "16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-modal": "^3.8.2",
     "@types/react-router-dom": "^4.3.4",
-    "@types/react-select": "^2.0.19",
+    "@types/react-select": "^3.0.0",
     "@types/recharts": "^1.1.17",
     "@types/screenfull": "^4.1.0",
     "@types/storybook__addon-actions": "^3.4.3",
-    "@types/storybook__addon-knobs": "^5.0.1",
+    "@types/storybook__addon-knobs": "^5.0.2",
     "@types/storybook__addon-links": "^3.3.5",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.16",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.11.0",
-    "apollo": "2.14.0",
+    "apollo": "2.15.0",
     "babel-loader": "^8.0.6",
-    "eslint-config-airbnb": "17.1.0",
+    "eslint-config-airbnb": "17.1.1",
     "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
     "jest-junit": "^6.4.0",
@@ -94,10 +97,16 @@
     "source-map-explorer": "^2.0.1",
     "typescript": "3.5.2"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
