--- a/.eslintrc
+++ b/.eslintrc
@@ -33,6 +33,6 @@
     "react/no-did-update-set-state": "off",
     "react/jsx-one-expression-per-line": "off",
     "react/destructuring-assignment": "warn",
-    "import/prefer-default-export": "warn"
+    "import/prefer-default-export": "off"
   }
 }
