--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
+    "@types/react-loadable": "^5.5.1",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.2",
     "apollo-cache-persist": "^0.1.1",
@@ -43,8 +44,10 @@
     "react-apollo": "^3.0.0-beta.3",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.8.6",
+    "react-feather": "^2.0.3",
     "react-final-form": "^6.3.0",
     "react-helmet": "^5.2.1",
+    "react-loadable": "^5.5.0",
     "react-modal": "^3.8.2",
     "react-particles-js": "^2.6.0",
     "react-router-dom": "^5.0.1",
