--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
     "final-form": "^4.18.2",
-    "firebase": "^6.3.0",
+    "firebase": "^6.3.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "luxon": "^1.17.1",
     "polished": "^3.4.1",
     "react": "^16.8.6",
@@ -54,7 +54,8 @@
     "react-toastify": "^5.3.2",
     "recharts": "^1.6.2",
     "screenfull": "^4.2.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "use-react-router": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -88,7 +89,7 @@
     "apollo": "2.16.0",
     "babel-loader": "^8.0.6",
     "eslint-config-airbnb": "17.1.1",
-    "eslint-plugin-import": "^2.18.0",
+    "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
