--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lodash": "^4.17.15",
     "luxon": "^1.17.1",
     "polished": "^3.4.1",
+    "primereact": "^3.1.7",
     "react": "^16.8.6",
     "react-apollo": "^3.0.0-beta.4",
     "react-copy-to-clipboard": "^5.0.1",
