--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "luxon": "^1.17.1",
+    "moment": "^2.24.0",
     "polished": "^3.4.1",
     "react": "^16.8.6",
     "react-apollo": "^3.0.0-beta.4",
     "react-copy-to-clipboard": "^5.0.1",
+    "react-dates": "18.3.1",
     "react-dom": "^16.8.6",
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.0",
@@ -52,6 +54,7 @@
     "react-select": "^3.0.4",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.3.2",
+    "react-with-styles": "^3.2.3",
     "recharts": "^1.6.2",
     "screenfull": "^4.2.0",
     "styled-components": "^4.3.2",
@@ -72,6 +75,7 @@
     "@types/node": "12.6.8",
     "@types/react": "^16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
+    "@types/react-dates": "^17.1.5",
     "@types/react-dom": "16.8.4",
     "@types/react-helmet": "^5.0.8",
     "@types/react-modal": "^3.8.2",
