--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
+    "@rehooks/component-size": "^1.0.3",
     "@types/react-loadable": "^5.5.1",
     "apollo-cache": "^1.3.2",
     "apollo-cache-inmemory": "^1.6.2",
@@ -31,13 +32,13 @@
     "apollo-link-context": "^1.0.18",
     "apollo-link-http": "^1.5.15",
     "final-form": "^4.18.2",
-    "firebase": "^6.3.1",
+    "firebase": "^6.3.3",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
-    "luxon": "^1.17.1",
+    "luxon": "^1.17.2",
     "moment": "^2.24.0",
     "polished": "^3.4.1",
     "react": "^16.8.6",
@@ -47,6 +48,7 @@
     "react-dom": "^16.8.6",
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.0",
+    "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.1",
     "react-loadable": "^5.5.0",
     "react-modal": "^3.9.1",
@@ -55,7 +57,7 @@
     "react-spring": "^8.0.27",
     "react-toastify": "^5.3.2",
     "recharts": "^1.6.2",
-    "screenfull": "^4.2.0",
+    "screenfull": "^4.2.1",
     "styled-components": "^4.3.2",
     "use-react-router": "^1.0.7"
   },
@@ -75,7 +77,8 @@
     "@types/react": "^16.8.23",
     "@types/react-copy-to-clipboard": "^4.2.6",
     "@types/react-dates": "^17.1.5",
-    "@types/react-dom": "16.8.4",
+    "@types/react-dom": "16.8.5",
+    "@types/react-grid-layout": "^0.16.7",
     "@types/react-helmet": "^5.0.8",
     "@types/react-modal": "^3.8.2",
     "@types/react-router-dom": "^4.3.4",
@@ -87,16 +90,16 @@
     "@types/storybook__addon-links": "^3.3.5",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.18",
-    "@typescript-eslint/eslint-plugin": "^1.12.0",
-    "@typescript-eslint/parser": "^1.12.0",
-    "apollo": "2.16.0",
+    "@typescript-eslint/eslint-plugin": "^1.13.0",
+    "@typescript-eslint/parser": "^1.13.0",
+    "apollo": "2.16.2",
     "babel-loader": "^8.0.6",
     "eslint-config-airbnb": "17.1.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.2",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "jest-junit": "^6.4.0",
+    "jest-junit": "^7.0.0",
     "react-scripts": "^3.0.1",
     "source-map-explorer": "^2.0.1",
     "typescript": "3.5.3"
