--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "history": "^4.9.0",
+    "humanize-duration": "^3.20.1",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.15",
     "luxon": "^1.17.2",
@@ -71,6 +72,7 @@
     "@storybook/react": "^5.1.9",
     "@storybook/theming": "^5.1.9",
     "@types/firebase": "^3.2.1",
+    "@types/humanize-duration": "^3.18.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/lodash": "^4.14.136",
     "@types/luxon": "^1.15.2",
