--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-final-form": "^6.3.0",
     "react-grid-layout": "^0.16.6",
     "react-helmet": "^5.2.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-loadable": "^5.5.0",
     "react-modal": "^3.9.1",
     "react-router-dom": "^5.0.1",
@@ -79,6 +80,7 @@
     "@types/react-dom": "16.8.5",
     "@types/react-grid-layout": "^0.16.7",
     "@types/react-helmet": "^5.0.8",
+    "@types/react-infinite-scroller": "^1.2.1",
     "@types/react-modal": "^3.8.2",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-select": "^3.0.1",
