--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "moment": "^2.24.0",
     "polished": "^3.4.1",
     "react": "^16.8.6",
-    "react-apollo": "^3.0.0-beta.4",
+    "react-apollo": "^3.0.0",
     "react-copy-to-clipboard": "^5.0.1",
     "react-dates": "18.3.1",
     "react-dom": "^16.8.6",
@@ -78,10 +78,10 @@
     "@types/react-dates": "^17.1.5",
     "@types/react-dom": "16.8.5",
     "@types/react-grid-layout": "^0.16.7",
-    "@types/react-helmet": "^5.0.8",
+    "@types/react-helmet": "^5.0.9",
     "@types/react-modal": "^3.8.2",
     "@types/react-router-dom": "^4.3.4",
-    "@types/react-select": "^3.0.1",
+    "@types/react-select": "^3.0.2",
     "@types/recharts": "^1.1.20",
     "@types/screenfull": "^4.1.0",
     "@types/storybook__addon-actions": "^3.4.3",
@@ -91,7 +91,7 @@
     "@types/styled-components": "^4.1.18",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
-    "apollo": "2.17.0",
+    "apollo": "2.17.1",
     "babel-loader": "^8.0.6",
     "eslint-config-airbnb": "17.1.1",
     "eslint-plugin-import": "^2.18.2",
