--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "react-select": "^3.0.4",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.3.2",
-    "recharts": "1.6.2",
+    "recharts": "^1.7.1",
     "screenfull": "^4.2.1",
     "styled-components": "^4.3.2",
     "use-react-router": "^1.0.7"
