--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "react": "16.8.6",
     "react-apollo": "^3.0.0",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dates": "18.3.1",
+    "react-dates": "^20.3.0",
     "react-dom": "16.8.6",
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.0",
