--- a/.eslintrc
+++ b/.eslintrc
@@ -27,12 +27,10 @@
     "react/jsx-filename-extension": [1, {"extensions": [".tsx", ".jsx"]}],
     "@typescript-eslint/no-unused-vars": ["error", {"ignoreRestSiblings": true}],
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
-    "react/sort-comp": "off",
     "operator-linebreak": "off",
     "react/no-did-update-set-state": "off",
     "react/jsx-one-expression-per-line": "off",
-    "react/destructuring-assignment": "warn",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
