--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-toastify": "^5.3.2",
     "recharts": "^1.7.1",
     "screenfull": "^4.2.1",
+    "simple-statistics": "^7.0.5",
     "styled-components": "^4.3.2",
     "use-react-router": "^1.0.7"
   },
