--- a/.github/workflows/dev-build-deploy.yml
+++ b/.github/workflows/dev-build-deploy.yml
@@ -7,10 +7,11 @@ on:
 
 jobs:
   build:
-    runs-on: ayankovsky/node-serverless-aws-latest
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
       - name: install dependencies
         run: yarn
       - name: lint
