Added react-snap and meta tags

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "react-snap",
     "test": "react-scripts test",
     "tsc": "tsc",
     "lint": "eslint \"src/**\"",
@@ -18,7 +19,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.25",
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
-    "@fortawesome/react-fontawesome": "^0.1.5",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "@loadable/component": "^5.10.3",
     "@material-ui/core": "^4.5.1",
     "@material-ui/icons": "^4.5.1",
@@ -35,7 +36,7 @@
     "firebase": "^7.2.1",
     "graphql": "^14.5.8",
     "graphql-tag": "^2.10.1",
-    "graphql-tools": "^4.0.5",
+    "graphql-tools": "^4.0.6",
     "graphql-type-json": "^0.3.0",
     "graphql.macro": "^1.4.2",
     "history": "^4.10.1",
@@ -44,64 +45,65 @@
     "luxon": "^1.19.3",
     "moment": "^2.24.0",
     "polished": "^3.4.1",
-    "react": "16.10.2",
+    "react": "16.11.0",
     "react-apollo": "^3.1.3",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dates": "^21.2.1",
-    "react-dom": "16.10.2",
+    "react-dates": "^21.3.1",
+    "react-dom": "16.11.0",
     "react-feather": "^2.0.3",
     "react-final-form": "^6.3.0",
-    "react-grid-layout": "^0.16.6",
+    "react-grid-layout": "^0.17.0",
     "react-helmet": "^5.2.1",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.1.2",
     "react-router-ga": "^1.2.2",
     "react-spring": "^8.0.27",
     "react-toastify": "^5.4.0",
-    "react-use": "^12.7.1",
-    "recharts": "1.8.2",
+    "react-use": "^12.7.2",
+    "recharts": "^1.8.5",
     "simple-statistics": "^7.0.5",
     "styled-components": "^4.4.0",
     "use-react-router": "^1.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.6.2",
-    "@storybook/addon-info": "^5.2.4",
-    "@storybook/addon-knobs": "^5.2.4",
-    "@storybook/addon-viewport": "^5.2.4",
-    "@storybook/addons": "^5.2.4",
-    "@storybook/react": "^5.2.4",
-    "@storybook/theming": "^5.2.4",
+    "@storybook/addon-info": "^5.2.5",
+    "@storybook/addon-knobs": "^5.2.5",
+    "@storybook/addon-viewport": "^5.2.5",
+    "@storybook/addons": "^5.2.5",
+    "@storybook/react": "^5.2.5",
+    "@storybook/theming": "^5.2.5",
     "@types/firebase": "^3.2.1",
     "@types/graphql-type-json": "^0.3.2",
     "@types/jwt-decode": "^2.2.1",
     "@types/loadable__component": "^5.10.0",
     "@types/lodash-es": "^4.17.3",
     "@types/luxon": "^1.15.2",
-    "@types/node": "12.11.1",
-    "@types/react": "^16.9.9",
+    "@types/node": "12.11.7",
+    "@types/react": "^16.9.10",
     "@types/react-copy-to-clipboard": "^4.3.0",
     "@types/react-dates": "^17.1.5",
     "@types/react-dom": "16.9.2",
     "@types/react-grid-layout": "^0.16.7",
-    "@types/react-helmet": "^5.0.12",
+    "@types/react-helmet": "^5.0.13",
     "@types/react-infinite-scroller": "^1.2.1",
-    "@types/react-modal": "^3.8.3",
+    "@types/react-modal": "^3.10.0",
     "@types/react-router-dom": "^5.1.0",
-    "@types/recharts": "^1.7.0",
+    "@types/recharts": "^1.8.0",
     "@types/screenfull": "^4.1.0",
     "@types/storybook__react": "^4.0.2",
     "@types/styled-components": "^4.1.19",
-    "@typescript-eslint/eslint-plugin": "^2.4.0",
-    "@typescript-eslint/parser": "^2.4.0",
-    "apollo": "^2.19.0",
+    "@typescript-eslint/eslint-plugin": "^2.5.0",
+    "@typescript-eslint/parser": "^2.5.0",
+    "apollo": "^2.21.0",
     "babel-loader": "^8.0.6",
     "eslint": "^6.5.1",
     "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "jest-junit": "^8.0.0",
+    "jest-junit": "^9.0.0",
     "react-scripts": "^3.2.0",
+    "react-snap": "^1.23.0",
     "source-map-explorer": "^2.1.0",
     "typescript": "^3.6.3"
   },
